# dicom-importer

./: .dicom-importer  .gitignore  README.md  icon.icns  main.py  pyproject.toml
release/DICOM-Importer.app/Contents/: Info.plist
release/DICOM-Importer.app/Contents/Frameworks/: libtcl9.0.dylib  libtcl9tk9.0.dylib  pydicom  pydicom-3.0.1.dist-info
release/DICOM-Importer.app/Contents/Frameworks/PIL/__dot__dylibs/: libXau.6.dylib  libjpeg.62.4.0.dylib  liblcms2.2.dylib  liblzma.5.dylib  libopenjp2.2.5.3.dylib  libsharpyuv.0.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libxcb.1.1.0.dylib  libz.1.3.1.dylib
release/DICOM-Importer.app/Contents/Resources/pydicom-3.0.1.dist-info/: RECORD
release/DICOM-Importer.app/Contents/_CodeSignature/: CodeResources
